fix z-index

--- a/public/style/globals.css
+++ b/public/style/globals.css
@@ -33,6 +33,7 @@ body {
 .relative { position: relative; }
 .absolute { position: absolute; }
 .inset-0 { top: 0; right: 0; bottom: 0; left: 0; }
+.z-0 { z-index: 0;}
 .-z-10 { z-index: -10; }
 
 .h-screen { height: 100vh; }
@@ -59,7 +60,7 @@ body {
 .bg-green { background-color: #5ca4a9; }
 .hover\:bg-green:hover { background-color: #5ca4a9dd; }
 .bg-image {
-  background-image: url('/image/background-image.png');
+  background-image: url('/public/image/background-image.png');
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
